Fix map z-index. Also fix form autocomplete height. ref #653

--- a/lemarche/static/itou_marche/components/_autocomplete.scss
+++ b/lemarche/static/itou_marche/components/_autocomplete.scss
@@ -3,7 +3,7 @@
 	// force .form-control
 	display: block !important;
 	width: 100% !important;
-	height: calc(1.2em + 1.68rem + 4px) !important;
+	// height: calc(1.2em + 1.68rem + 4px) !important;  // commented out to match with other form selects
 	padding: .84rem 1rem !important;
 	font-size: 1rem !important;
 	font-weight: 400 !important;
