--- a/lemarche/static/itou_marche/components/_maparea.scss
+++ b/lemarche/static/itou_marche/components/_maparea.scss
@@ -2,6 +2,7 @@
 .map-canvas {
 	width: 100%;
 	height: 100%;
+	z-index: 0;
 }
 
 // defaults
